[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "StreamTestBench"
description = "A Test Bench for Signal Processing Blocks"
version = "0.0.1"
authors = [
    { name = "Coburn Wightman" },
    { name = "Harnesser" },
]
readme = "README.md"
license = {file = "LICENSE.txt"}

requires-python = ">=3.9"
dependencies = [
    "matplotlib"
]

classifiers = [
"Private :: Do Not Upload",
"Development Status :: 3 - Alpha",
"Intended Audience :: Signal Processing Developers",
"Topic :: Software Development :: Signal Block Visualization",
"License :: OSI Approved :: AGPL-3.0-or-later License",
"Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://github.com/coburnw/StreamTestBench"

